--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 body
 {
-    background: url(images/lib1.jpeg)
+    background: url(images/lib1.jpeg);
     no-repeat center center fixed;
     background-size: cover;
 }
